fix: documentation and routes error messages

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -427,12 +427,12 @@ Seguono i diagrammi UML delle classi del Model e del Controllore, che rappresent
   \begin{center}
     \includegraphics[width=0.9\textwidth]{umlModel.pdf}
   \end{center}
-  \caption{Diagramma UML delle classi del Model} 
+  \caption{Diagramma UML delle classi del Model con relativi endpoints} 
 \end{figure}
 \noindent
 \begin{figure}[H]
   \begin{center}
-    \includegraphics[width=1\textwidth]{controller.pdf}
+    \includegraphics[width=1\textwidth]{uml.pdf}
   \end{center}
   \caption{Classi UML dei Controller} 
   \label{fig:controller}
